# SRC2-smach

./: README.md
state_machine/: CMakeLists.txt  package.xml  setup.py
state_machine/action/: GPSNav.action  OptimalSearch.action
state_machine/config/: ground_truth.yaml  small_excavator_1.yaml  small_excavator_2.yaml  small_hauler_1.yaml  small_hauler_2.yaml  small_scout_1.yaml  small_scout_2.yaml
state_machine/include/state_machine/: sm_excavator.hpp  sm_hauler.hpp  sm_rd1.hpp  sm_rd2.hpp  sm_rd3.hpp  sm_scout.hpp  sm_utils.h
state_machine/launch/: .sm_round1.launch.swp  debug_sm_round1.launch  exc_hau_state_machine_rd2.launch  exc_haul_state_machine_rd2.launch  exc_state_machine_rd1.launch  excavator_hauler_state_machine_rd2.launch  excavator_only_sm_round2.launch  excavator_state_machine.launch  excavator_state_machine_rd2.launch  hauler_only_sm_round2.launch  hauler_state_machine.launch  hauler_state_machine_rd2.launch  manual_sm.launch  master.launch  masterScout.launch  masterScout2.launch  scout1_state_machine.launch  scout2_state_machine.launch  scout_round1.launch  scout_state_machine.launch  scout_state_machine_rd1.launch  scout_state_machine_rd3.launch  sm.launch  sm_example.launch  sm_excavator.launch  sm_excavator2.launch  sm_hauler.launch  sm_hauler2.launch  sm_round1.launch  sm_round2.launch  sm_round3.launch  sm_scout.launch  sm_scout2.launch  test_exc_sm_round2.launch  testing_checkway_sm_round1.launch
state_machine/launch/deprecated/: masterScout2MoveBase.launch  sm_scoutMoveBase.launch
state_machine/msg/: ExcavationStatus.msg  HaulerStatus.msg  RobotStatus.msg
state_machine/src/: approach_marker_action_server.py  circle_marker_action_server.py  comms_loss_action_server.py  gps_loss_action_server.py  gps_nav_action_server.py  init_srv.py  leg_select_srv.py  manual_sm_node.cpp  obav_action_server.py  optimal_search_action_server.py  shutdown_srv.py  signal_completion_action_server.py  sm2_rd2_new.cpp  sm_excavator.cpp  sm_excavator_node.cpp  sm_hauler.cpp  sm_hauler_node.cpp  sm_rd1.cpp  sm_rd1_node.cpp  sm_rd2.cpp  sm_rd2_node.cpp  sm_rd3.cpp  sm_rd3_node.cpp  sm_scout.cpp  sm_scout_node.cpp  state_machine_node.cpp  tele_op_action_server.py  urc_state_machine.py
state_machine/srv/: LegSelect.srv  SetMobility.srv
state_machine/test/: sm_test.py
state_machine/utils/: sm_utils.cpp  sm_utils.py  utils_test_node.cpp
task_planning/: CMakeLists.txt  package.xml
task_planning/config/: offline_plan.yaml  offline_plan2.yaml  offline_plan5.yaml  offline_planBig.yaml  offline_plan_final.yaml  offline_plan_final2.yaml  offline_plan_seed5.yaml  offline_plan_triangle.yaml  planning_params.yaml
task_planning/config/deprecated/: offline_plan.yaml  offline_plan_final2.yaml  offline_plan_final3.yaml  offline_plan_final_2Backup.yaml
task_planning/include/task_planning/: CostFunction.hpp  ForwardSearch.hpp  TaskPlanner.hpp  Types.hpp  rover_decision_metrics.h  volatile_decision_metrics.h
task_planning/launch/: task_planning.launch
task_planning/src/: CostFunction.cpp  ForwardSearch.cpp  ForwardSearch_act.cpp  ForwardSearch_alg.cpp  ForwardSearch_sim.cpp  ForwardSearch_util.cpp  TaskPlanner.cpp  excavation_task_node.cpp  scouting_task_node.cpp
task_planning/srv/: DumpCoordination.srv  PlanInfo.srv
task_planning/test/: test_cartesian_product.cpp  test_forward_search.cpp
