<?xml version="1.0"?>
<package format="2">
  <name>state_machine</name>
  <version>0.0.0</version>
  <description>State Machine, service, and action server implementations.</description>

  <maintainer email="urcnuc115@todo.todo">urcnuc115</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
