<?xml version="1.0"?>
<package format="2">
  <name>state_machine</name>
  <version>0.0.0</version>
  <description>The state_machine package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jared@todo.todo">jared</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/state_machine</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <buildtool_depend>message_runtime</buildtool_depend>
  <buildtool_depend>roslib</buildtool_depend>
  <buildtool_depend>waypoint_nav</buildtool_depend>
  <buildtool_depend>waypoint_gen</buildtool_depend>
  <buildtool_depend>driving_tools</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  <buildtool_depend>move_excavator</buildtool_depend>
  <buildtool_depend>actionlib</buildtool_depend>
  <buildtool_depend>sensor_fusion</buildtool_depend>
  <buildtool_depend>src2_object_detection</buildtool_depend>
  <buildtool_depend>std_srvs</buildtool_depend>
  <buildtool_depend>waypoint_checker</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <buildtool_depend>srcp2_msgs</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <buildtool_depend>motion_control</buildtool_depend>
  <buildtool_depend>message_filters</buildtool_depend>
  <buildtool_depend>tf2_ros</buildtool_depend>
  <buildtool_depend>task_planning</buildtool_depend>

  <build_depend>catkin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>waypoint_nav</build_depend>
  <build_depend>waypoint_gen</build_depend>
  <build_depend>driving_tools</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_excavator</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_fusion</build_depend>
  <build_depend>src2_object_detection</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>waypoint_checker</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>srcp2_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>motion_control</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>volatile_map</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>task_planning</build_depend>

  <build_export_depend>catkin</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>waypoint_nav</build_export_depend>
  <build_export_depend>waypoint_gen</build_export_depend>
  <build_export_depend>driving_tools</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>move_excavator</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>sensor_fusion</build_export_depend>
  <build_export_depend>src2_object_detection</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>waypoint_checker</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>srcp2_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>motion_control</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>volatile_map</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>task_planning</build_export_depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>waypoint_nav</exec_depend>
  <exec_depend>waypoint_gen</exec_depend>
  <exec_depend>driving_tools</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>move_excavator</exec_depend>
  <exec_depend>sensor_fusion</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>src2_object_detection</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>waypoint_checker</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>srcp2_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>motion_control</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>volatile_map</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>task_planning</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
